src/test/deca/context/invalid/ContextAvecObjet/Cast/booleanCastFloat.deca
//Description
//  Cast d'un float en boolean
//
//Réponse
//  Erreur contextuelle ligne 9
//  un float ne peut pas être cast dans un boolean
{
    float a = 1;
    boolean x = (boolean)(a);
}